<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_250"
    tools:context=".DrawableActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_drawable_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_main"
        android:text="@string/start_drawable_activity"
        android:theme="@style/Theme.Razvii_pt16.MainButton"
        app:layout_constraintBottom_toTopOf="@id/btn_start_bitmap_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_bitmap_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_main"
        android:text="@string/start_bitmap_activity"
        android:theme="@style/Theme.Razvii_pt16.MainButton"
        app:layout_constraintBottom_toTopOf="@id/btn_start_glide_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_drawable_activity" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_glide_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_main"
        android:text="@string/start_glide_activity"
        android:theme="@style/Theme.Razvii_pt16.MainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_bitmap_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>